2013-07-29  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: follow symlinks when requested.

2013-07-23  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add progress meter for parent mirrors.
	* Job.cc, Job.h: (GetCmdLine) new virtual method.
	* FileSet.cc, FileSet.h: (CountBytes) new method.
	* ftpclass.cc: move line and all_lines along with connection.

2013-07-15  Alexander V. Lukyanov <lav@yars.free.net>

	* attach.h: pass all three std fds.
	* lftp.cc: simplify attach/detach logic; get rid of goto;
	  handle Detached condition.

2013-07-04  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: don't use IPV6_V6ONLY if not defined.
	  (from y-iida@secom.co.jp).
	* FileSet.cc: (FileInfo::Merge) copy size properly.

2013-07-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: recognize and ignore human readable sizes.

2013-05-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_tinfo.cc: fixed segfault when there is no TERM env var.
	* buffer_zlib.cc: fixed compilation with older zlib.

2013-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer_zlib.cc, buffer_zlib.h: implement inflator.
	* Http.cc, Http.h: add support for gzip Content-Encoding.
	* Makefile.am: buffer_zlib for proto-http.
	* buffer.cc, buffer.h: (SetTranslator) translate unread data.
	* buffer.h: (IsFull) new method.
	* FileCopy.cc, FileCopy.h: (FileCopyPeerMemory) new peer type;
	  use IOBuffer::SetMaxBuffered and IsFull.
	* Torrent.cc, Torrent.h: use FileCopy for metainfo fetching.

2013-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SFtpListInfo::Do) fixed return value (prevents an endless loop).
	* FileCopy.cc: init date member; clean up date/size requesting in FileCopyPeerFA.

2013-05-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: set size=NO_SIZE when the size could not be found.
	* FileSet.cc: allow info merging for files with the same basename.